# dynamic_cloud_filter

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: default_params.yaml
config/examples/: indoor_robot.yaml  urban_driving.yaml
docker/: Dockerfile  Dockerfile_bk  ros_entrypoint.sh  start.sh  stop.sh
docs/: PERFORMANCE_ANALYSIS.md
include/centerpoint/: centerpoint.h
include/dynamic_cloud_filter/: cuda_filter.h  optimized_filter.h  point_cloud_filter.h  point_cloud_utils.h  spatial_hash_filter.h
launch/: complete_pipeline.launch  dynamic_filter.launch  test_filter.launch  with_centerpoint.launch
models/: README.md
scripts/: setup_models.sh  test_filter.sh
src/: benchmark_filter.cpp  cloud_format_converter.cpp  cuda_filter.cu  detection_filter_node.cpp  dynamic_filter_node.cpp  point_cloud_filter.cpp  point_cloud_utils.cpp  spatial_hash_filter.cpp
src/centerpoint/: centerpoint.cpp  postprocess.cpp  postprocess_kernels.cu  preprocess.cpp  preprocess_kernels.cu  tensorrt.cpp
